--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -16,7 +16,7 @@
         <a class="nav-link" href="#">Pricing</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
+        <a class="nav-link disabled" href="/register">Log in</a>
       </li>
     </ul>
   </div>
