--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,16 @@
-{%extends 'base.html'%}
-{%blocknavbar%}
+{%extends 'macros.html'%}
+{%block head%}
+{{super()}}
+{%endblock%}
 
+{%block navbar%}
+{{super()}}
+{%endblock%}
+
+{%block content%}
+<h2 class='test'>Homepage</h2>
+{%endblock%}
+
+{%block footer%}
+{{super()}}
 {%endblock%}
