--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -1,7 +1,9 @@
 #four{
   background-image: url('./images/404-Not-Found.jpg');
+  background-position: 100%;
+  background-position:center;
+  height: 80%;
   width: 100%;
-  border: 2px solid red;
 }
 .test{
   text-decoration: underline;
