--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -37,7 +37,7 @@
           {%if current_user.is_authenticated%}
           <span class="name">{{current_user.name}}</span><a class="nav-link" href="{{url_for('auth.logout')}}">Log Out</a>
           {%else%}
-          <span><a href="url_for('auth.login')">Log in</a></span>
+          <span><a href="{{url_for('auth.login')}}">Log in</a></span>
           {%endif%}
         </li>
       </ul>
