moves login html and register html to templates in app

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,5 +1,5 @@
 {%extends 'macros.html'%}
-{% imports 'bootstrap/wtf.html' as wtf%}
+{% import 'bootstrap/wtf.html' as wtf%}
 
 {%block head%}
 {{super()}}
