--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -10,19 +10,20 @@
 {%endblock%}
 
 {%block content%}
-<div class="col-md-2"></div>
-<div class="col-md-8">
-  <!--Error message display-->
-  {% for message in get_flashed_messages()%}
-  <div class="alert alert-danger">
-    <button type="button" class="close" data-dismiss="alert">&timesb;</button>
-    {{message}}
+<div class="container">
+  <div class="col-md-2"></div>
+  <div class="col-md-8">
+    <!--Error message display-->
+    {% for message in get_flashed_messages()%}
+    <div class="alert alert-danger">
+      <button type="button" class="close" data-dismiss="alert">&timesb;</button>
+      {{message}}
+    </div>
+    {%endfor%}
+    <!--Login form-->
+    {{wtf.quick_form(login_form)}}
+    <p> Don't have an account yet? <a href="{{url_for('auth.register')}}">Sign up Here</a></p>
   </div>
-  {%endfor%}
-  <!--Login form-->
-  {{wtf.quick_form(login_form)}}
-  <p> Don't have an account yet? <a href="{{url_for('auth.register')}}">Sign up Here</a></p>
+  <div class="col-md-2"></div>
 </div>
-<div class="col-md-2"></div>
-
 {%endblock%}
