--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -25,18 +25,33 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/">{{category1}} <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
+          <a class="nav-link" href="#">{{category2}}</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
+          <a class="nav-link" href="#">{{category3}}</a>
         </li>
         <li class="nav-item">
-          {%if current_user.is_authenticated%}
+          <a class="nav-link" href="#">{{category4}}</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">{{category5}}</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">{{category6}}</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">{{category7}}</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">{{category8}}</a>
+        </li>
+        <li class="nav-item navbar-right">
+          {% if current_user.is_authenticated %}
           <span class="name">{{current_user.name}}</span>
-          <a href="{{url_for('main.userinfo', sname=current_user.name)}}">| Info</a>
+          <a href="{{url_for('main.update_info', sname=current_user.name)}}">| Info</a>
           <a class="nav-link" href="{{url_for('auth.logout')}}">Log Out</a>
           {%else%}
           <span><a href="{{url_for('auth.login')}}">Log in</a></span>
