--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -16,7 +16,7 @@
 <body>
 
   {%block navbar%}
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light bg-warning">
     <a class="navbar-brand" href="/">Minute Pitch</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
