--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -18,8 +18,8 @@
   {%block navbar%}
   <nav class="navbar navbar-expand-lg navbar-light bg-warning">
     <a class="navbar-brand" href="/">Minute Pitch</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#navbar-nav"
+      aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
