--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -20,7 +20,7 @@
 </div>
 </div>
 
-<div class="col-md-2"><a href="{{url_for('main.new_pitch', sname=current_user.name)}}"><button class="btn btn-secondary"><h3 class='adder'>Add Your Pitch</h3><h1 class='sign'>&plus;</h1></button> </a></div>
+<div class="col-md-2"><a href="{{url_for('main.new_pitch', sname=current_user.name)}}"><button class="btn btn-secondary"><h4></h4><h4></h4><h3 class='adder'>Add Your Pitch</h3><h1 class='sign'>&plus;</h1></button> </a></div>
 </div>
 
 </div>
