--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -25,7 +25,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="/">{{category1}} <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="{{url_for('main.view_category', category=category1)}}">{{category1}} <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">{{category2}}</a>
@@ -49,9 +49,9 @@
           <a class="nav-link" href="#">{{category8}}</a>
         </li>
         <li class="nav-item navbar-right">
-          {% if current_user.is_authenticated %}
+          {%if current_user.is_authenticated()%}
           <span class="name">{{current_user.name}}</span>
-          <a href="{{url_for('main.update_info', sname=current_user.name)}}">| Info</a>
+          <a href="{{url_for('main.user_profile', sname = current_user.name)}}">| Info</a>
           <a class="nav-link" href="{{url_for('auth.logout')}}">Log Out</a>
           {%else%}
           <span><a href="{{url_for('auth.login')}}">Log in</a></span>
