--- a/app/templates/userinfo.html
+++ b/app/templates/userinfo.html
@@ -15,8 +15,8 @@
   <div class="row">
   <div class="col-md-4">
     <!--Displaying user bio-->
-    {% if user_prof.bio %}
-      <p> {{user_prof.bio}}</p>
+    {% if user_prof.userBio %}
+      <p> {{user_prof.userBio}}</p>
     {%else%}
       <p> {{user.name| capitalize}} has no bio </p>
     {% endif %}
@@ -33,8 +33,16 @@
   </div>
   <div class="col-md-4">
       <!--Displaying pitches-->
-      {% if user_prof.pitchesCreated %}
-      <p> {{user_prof.pitchesCreated}}</p>
+      {% if pitch %}
+      
+      
+        {% for item in pitch%}
+        <h4> {{item.title}}</h4>
+        <p>{{item.content}}</p>
+        <div class="col-md-6"><small>{{item.category}}</small></div>
+        <div class="col-md-6"><small>{{item.datePosted}}</small></div>
+      </div>
+        {%endfor%}
       {%else%}
       <p> {{user.name| capitalize}} has no pitches made </p>
       {% endif %}
