--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -18,35 +18,31 @@
   {%block navbar%}
   <nav class="navbar navbar-expand-lg navbar-light bg-warning">
     <a class="navbar-brand" href="/">Minute Pitch</a>
-    <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#navbar-nav"
-      aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
+    <div class="navbar-collapse">
       <ul class="navbar-nav">
         <li class="nav-item active">
           <a class="nav-link" href="{{url_for('main.view_category', category=category1)}}">{{category1}} <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">{{category2}}</a>
+          <a class="nav-link" href="{{url_for('main.view_category', category=category2)}}">{{category2}}</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">{{category3}}</a>
+          <a class="nav-link" href="{{url_for('main.view_category', category=category3)}}">{{category3}}</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">{{category4}}</a>
+          <a class="nav-link" href="{{url_for('main.view_category', category=category4)}}">{{category4}}</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">{{category5}}</a>
+          <a class="nav-link" href="{{url_for('main.view_category', category=category5)}}">{{category5}}</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">{{category6}}</a>
+          <a class="nav-link" href="{{url_for('main.view_category', category=category6)}}">{{category6}}</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">{{category7}}</a>
+          <a class="nav-link" href="{{url_for('main.view_category', category=category7)}}">{{category7}}</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">{{category8}}</a>
+          <a class="nav-link" href="{{url_for('main.view_category', category=category8)}}">{{category8}}</a>
         </li>
         <li class="nav-item navbar-right">
           {%if current_user.is_authenticated()%}
