--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -17,31 +17,31 @@
   {%block navbar%}
   <nav class="navbar navbar-expand-lg navbar-light bg-warning">
     <a class="navbar-brand" href="/">Minute Pitch</a>
-    <div class="navbar-collapse">
+    <div>
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="{{url_for('main.view_category', category=category1)}}">{{category1}} <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="{{url_for('main.view_category', category=pitchcategory1)}}">{{pitchcategory1}} <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{url_for('main.view_category', category=category2)}}">{{category2}}</a>
+          <a class="nav-link" href="{{url_for('main.view_category', category=pitchcategory1)}}">{{pitchcategory2}} <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{url_for('main.view_category', category=category3)}}">{{category3}}</a>
+          <a class="nav-link" href="{{url_for('main.view_category', category=pitchcategory3)}}">{{pitchcategory3}}</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{url_for('main.view_category', category=category4)}}">{{category4}}</a>
+          <a class="nav-link" href="{{url_for('main.view_category', category=pitchcategory4)}}">{{pitchcategory4}}</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{url_for('main.view_category', category=category5)}}">{{category5}}</a>
+          <a class="nav-link" href="{{url_for('main.view_category', category=pitchcategory5)}}">{{pitchcategory5}}</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{url_for('main.view_category', category=category6)}}">{{category6}}</a>
+          <a class="nav-link" href="{{url_for('main.view_category', category=pitchcategory6)}}">{{pitchcategory6}}</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{url_for('main.view_category', category=category7)}}">{{category7}}</a>
+          <a class="nav-link" href="{{url_for('main.view_category', category=pitchcategory7)}}">{{pitchcategory7}}</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{url_for('main.view_category', category=category8)}}">{{category8}}</a>
+          <a class="nav-link" href="{{url_for('main.view_category', category=pitchcategory8)}}">{{pitchcategory8}}</a>
         </li>
         <li class="nav-item navbar-right">
           {%if current_user.is_authenticated()%}
