--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="../static/styles.css">
-  <title>Minute Pitch</title> 
+  <title>Minute Pitch</title>
   {%endblock%}
 </head>
 
@@ -18,39 +18,20 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-warning">
     <a class="navbar-brand" href="/">Minute Pitch</a>
     <div>
+      {%for category in categoriesList%}
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="{{url_for('main.view_category', category=pitchcategory1)}}">{{pitchcategory1}} <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="{{url_for('main.view_category', category=category)}}">{{category}} <span
+              class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{url_for('main.view_category', category=pitchcategory1)}}">{{pitchcategory2}} <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{url_for('main.view_category', category=pitchcategory3)}}">{{pitchcategory3}}</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{url_for('main.view_category', category=pitchcategory4)}}">{{pitchcategory4}}</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{url_for('main.view_category', category=pitchcategory5)}}">{{pitchcategory5}}</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{url_for('main.view_category', category=pitchcategory6)}}">{{pitchcategory6}}</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{url_for('main.view_category', category=pitchcategory7)}}">{{pitchcategory7}}</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{url_for('main.view_category', category=pitchcategory8)}}">{{pitchcategory8}}</a>
-        </li>
-        <li class="nav-item navbar-right">
-          {%if current_user.is_authenticated()%}
-          <span class="name">{{current_user.name}}</span>
-          <a href="{{url_for('main.user_profile', sname = current_user.name)}}">| Info</a>
-          <a class="nav-link" href="{{url_for('auth.logout')}}">Log Out</a>
-          {%else%}
-          <span><a href="{{url_for('auth.login')}}">Log in</a></span>
-          {%endif%}
+        {%endfor%}
+        {%if current_user.is_authenticated()%}
+        <span class="name">{{current_user.name}}</span>
+        <a href="{{url_for('main.user_profile', sname = current_user.name)}}">| Info</a>
+        <a class="nav-link" href="{{url_for('auth.logout')}}">Log Out</a>
+        {%else%}
+        <span><a href="{{url_for('auth.login')}}">Log in</a></span>
+        {%endif%}
         </li>
       </ul>
     </div>
