--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -30,7 +30,7 @@
         <a href="{{url_for('main.user_profile', sname = current_user.name)}}">| Info</a>
         <a class="nav-link" href="{{url_for('auth.logout')}}">Log Out</a>
         {%else%}
-        <span><a href="{{url_for('auth.login')}}">Log in</a></span>
+        <a href="{{url_for('auth.login')}}"><span>Log in</span></a>
         {%endif%}
         </li>
       </ul>
