--- a/app/templates/addpitch.html
+++ b/app/templates/addpitch.html
@@ -10,14 +10,17 @@
 {%endblock%}
 
 {%block content%}
+{% if current_user.is_authenticated %}
 <div class="container">
     <div class="row">
     <h2 class='test col-md-3'></h2>
     <div class="col-md-6">{{wtf.quick_form(addpitchform)}}</div>
     <div class="col-md-3"></div>
     </div>
-    
 </div>
+{%else%}
+<p>To add a pitch idea, <a href="{{url_for('auth.login')}}"><span>Log in</span></a>
+{% endif %}
 {%endblock%}
 
 {%block footer%}
